ExtensionController: -refactored AdvancedSettings: -fixed filtering, not it remembers current filter when switching tabs
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@15173 ebf7c1c2-ba36-0410-9fe8-c592906822b4